- fixed small overlapping bug

--- a/htdocs/views/simple/style.css
+++ b/htdocs/views/simple/style.css
@@ -1096,7 +1096,7 @@ img {
 }
 #popupmenu li.subpopupmenu.extension ul.subpopupmenu.extension {
 	position: absolute;
-	left: 150px;
+	left: 135px;
 }
 #filler {
 	position: absolute;
